# dapozzo_line_tracking

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: pid_params.yaml
launch/: camera.launch  control.launch  full.launch  planner.launch
nodes/: camera_node.py  control_node.py  manual_control_node.py  planner_node.py
scripts/: visualizer.py
src/line_tracking/: colors.py  visualizer.py
src/line_tracking/nodes/: control_node.py  manual_control_node.py  planner_node.py
src/line_tracking/planning_strategies/: centerline_strategy.py  centroid_strategy.py  error_type.py
