<?xml version="1.0"?>
<package format="2">
  <name>dapozzo_line_tracking</name>
  <version>1.0.0</version>
  <description>Detection, planning and control logic for controlling a four-wheeled differential-drive robot.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="l.dapozzo@studenti.unipi.it">Leonardo Da Pozzo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- TODO -->
  <!-- <url type="website">http://wiki.ros.org/dapozzo_line_tracking</url> -->


  <author email="l.dapozzo@studenti.unipi.it">Leonardo Da Pozzo</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pynput-pip</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>